crates/tuna/tests/parser/fail/super-class-param-kw.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperClassParamKw = (
  ----

  test: super makes: errors = ('yes')
)
